--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -22,6 +22,7 @@ h1{
     padding: 10px;
     height: 30px;
     border: 1px solid white;
+    text-align: center;
     border-radius: 20px;
     background-color: transparent;
     margin-left: auto;
@@ -34,6 +35,7 @@ h1{
 #search-bar button{
     color: white;
     background-color: transparent;
+    text-align: center;
     margin-top: 10px;
     padding: 5px 10px;
     border: 1px solid white;
