--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -32,7 +32,7 @@ h1{
     outline: none;
 }
 
-#search-bar button{
+button{
     color: white;
     background-color: transparent;
     text-align: center;
@@ -42,6 +42,6 @@ h1{
     height: 30px;
     border-radius: 10px;
 }
-#search-bar button:hover{
+ button:hover{
     background-color: rgb(172, 162, 162);
 }
